Fix 'back' style on mobile

--- a/app/assets/sass/modules/controls/_buttons.scss
+++ b/app/assets/sass/modules/controls/_buttons.scss
@@ -55,6 +55,7 @@
     font-size: $smallprint;
     text-decoration: underline;
     box-shadow: none;
+    width: auto;
 
     &::before {
       content: "";
